force-app/main/default/objects/Account/fields/gwr_chk1__c.field-meta.xml
<CustomField>
    <fullName>gwr_chk1__c</fullName>
    <label>GWR chk1</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>