force-app/main/default/objects/Account/fields/gwr_Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>gwr_Customer_Health__c</fullName>
    <label>1Customer Health</label>
    <type>Text</type>
    <length>255</length>
</CustomField>