force-app/main/default/objects/Account/fields/gwr_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>gwr_Customer_Segment__c</fullName>
    <label>1Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <isActive>true</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
                <isActive>true</isActive>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>Strategic</fullName>
                <isActive>true</isActive>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>Federal</fullName>
                <isActive>true</isActive>
                <label>Federal</label>
            </value>
            <value>
                <fullName>State and Local</fullName>
                <isActive>true</isActive>
                <label>State and Local</label>
            </value>
            <value>
                <fullName>HigherEd</fullName>
                <isActive>true</isActive>
                <label>HigherEd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>