force-app/main/default/objects/Account/fields/gwr_Growth__c.field-meta.xml
<CustomField>
    <fullName>gwr_Growth__c</fullName>
    <label>1Growth</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>