force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
                <isActive>true</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>true</isActive>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <isActive>true</isActive>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <isActive>true</isActive>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Chrome</fullName>
                <isActive>true</isActive>
                <label>Chrome</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>